Options / <PGT_Background>: putting bg-content into the panes  - Background-render components for Grid, Plot & Patt modified to accept variable size. Some knock-on effects (Grid_d3draw and Grid_util also modified).  - Backgrounds render inside the newly defined panes.  - Inline styling only used where absolutely necessary in <PGT_Background>. Margins etc defined in fixed stylesheet.  (issues with multiple copies and grid spacing unit conversion)

--- a/react-pgt/public/css/PGT_Background.css
+++ b/react-pgt/public/css/PGT_Background.css
@@ -1,20 +1,18 @@
 /* PGT_Background.css */
+.PGT_Background{
+    position: absolute; /* necesary?? */
+  display: block;
+}
 
 .PGT_Background div.bg-grey{
     position: absolute; /* necesary?? */
   background: lightgray;
+    display: block;
 }
 
 .PGT_Background div.bg-grey > div{
-  box-shadow: 0px 0px 4px 2px black;
-  position: absolute;
-  background: white;
-}
-
-.PGT_Background div.bg-grey.quad > div{
-  width: 500px;
-  height: 350px;
-  margin: 20px;
+    margin: 20px;
   display: inline-block;
-  position: static;
+  box-shadow: 0px 0px 4px 2px black;
+  background: white;
 }
